@@ -1,3 +1,12 @@
+2004-09-04    <tino@firebird.03.softkill.net>
+
+	* Makefile.awk, Makefile.tino.dist, Makefile.proto: changes for
+	better override support.
+
+	* Makefile-tino.sh, Makefile.awk, Makefile.proto,
+	Makefile.d.proto: automatic creation of dependencies added (new
+	#include(...) method Makefile.d.proto).
+
 2004-08-25    <tino@firebird.03.softkill.net>
 
 	* Makefile.awk, Makefile-tino.sh: Lines which contain @MD5TINOIGN@
